# DistillKit

./: .gitignore  TEMP_print_out_tokens.py  batch_comparison.py  calculate_perplexity.py  cluster_config.yaml  combine_logits.py  comparison_config.yaml  config.yaml  config_old.yaml  config_sft.yaml  data_parallel_run.sh  datasets.yaml  distil_logits.py  distill_hidden_final.py  distill_logits_final.py  distill_teacher_outputs.py  distill_top_k_teacher_outputs.py  distillation_new_attempt.py  distillation_on_cluster.py  distillation_utils.py  distillation_with_diff_prompts_final.py  generate_teacher_outputs.py  inspect_random_sample_logits.py  inspect_teacher_outputs.py  interactive_run.sh  llm_as_judge.py  logit_inspection.py  model_evaluation.py  multinode_interactive_run.sh  multinode_run.sh  next_steps.txt  prefetch_models.py  prefetch_on_cluster.py  pyproject.toml  quick_eval.py  random_sample_logits.py  random_sampled_teacher_output_distillation.py  random_sampling_config.yaml  requirements.txt  response_only_distillation.py  (+11 more)
batch_req_and_res/: batch_answers_4o.py
top_k_experiments/: distill__top_k_teacher_outputs.py  generate_teacher_outputs.py  inspect_teacher_outputs.py  trim_teacher_tokens.py
